# android-llm-standalone

./: .gitignore  IOS_DESIGN.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/androidllm/: LlmApplication.kt  LlmInference.kt  MainActivity.kt  ModelDownloadWorker.kt
app/src/main/java/com/example/androidllm/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
ios_llm_app/: README.md
ios_llm_app/ios_llm_app/: ContentView.swift  Info.plist  LlmBridge.h  LlmBridge.mm  ios_llm_app-Bridging-Header.h  ios_llm_appApp.swift
